Added ipxe building
Signed-off-by: Zhenfang Wei <kopkop@gmail.com>

--- a/default.conf
+++ b/default.conf
@@ -2,18 +2,33 @@ server {
   listen   80;
   server_name  my_site.local www.my_site.local;
   root   /var/www/my_site;
-  access_log  /var/www/log/my_site.access.log;  
+  access_log  /var/www/log/my_site.access.log;
 
   location / {
       index  index.html index.htm index.pl;
-  }  
+  }
 
-  location ~ \.pl|cgi$ {
+  location ~ \.pl|cgi|fcgi$ {
       try_files $uri =404;
       gzip off;
       fastcgi_pass  127.0.0.1:8999;
       fastcgi_index index.pl;
       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
       include fastcgi_params;
-      } 
+      }
+  location ~ \.php$ {
+     #If a file isn’t found, 404
+     try_files $uri =404;
+      gzip off;
+     #Include Nginx’s fastcgi configuration
+     # include /etc/nginx/fastcgi.conf;
+     #Look for the FastCGI Process Manager at this location
+      fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+      include fastcgi_params;
+     fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+  }
 }
+
+fastcgi_buffer_size 128k;
+fastcgi_buffers 4 256k;
+fastcgi_busy_buffers_size 256k;
